# eve_ws

./: .gitattributes  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/eve_main/: EndEffectorPosition.h  GetPosition.h  GetPositionRequest.h  GetPositionResponse.h  GoToPosition.h  GoToPositionRequest.h  GoToPositionResponse.h  HomeY.h  HomeYRequest.h  HomeYResponse.h
devel/lib/eve_main/: eve_main_node  image_processing_node  motor_node  test_node  test_y
devel/lib/pkgconfig/: eve_main.pc
devel/lib/python3/dist-packages/eve_main/msg/: _EndEffectorPosition.py  __init__.py
devel/lib/python3/dist-packages/eve_main/srv/: _GetPosition.py  _GoToPosition.py  _HomeY.py  __init__.py
devel/share/common-lisp/ros/eve_main/msg/: EndEffectorPosition.lisp  _package.lisp  _package_EndEffectorPosition.lisp  eve_main-msg.asd
devel/share/common-lisp/ros/eve_main/srv/: GetPosition.lisp  GoToPosition.lisp  HomeY.lisp  _package.lisp  _package_GetPosition.lisp  _package_GoToPosition.lisp  _package_HomeY.lisp  (+1 more)
devel/share/eve_main/cmake/: eve_main-msg-extras.cmake  eve_main-msg-paths.cmake  eve_mainConfig.cmake
devel/share/roseus/ros/eve_main/: manifest.l
src/eve_main/: CMakeLists.txt
src/eve_main/include/eve_main/: Cutter.h  EndEffectorConfig.h  Grip.h  MotorConfig.h
src/eve_main/launch/: dry_run.launch  eve.launch  test.launch  test_motor.launch
src/eve_main/msg/: EndEffectorPosition.msg
src/eve_main/src/: .image_processing_node.cpp.swp  Cutter.cpp  EndEffectorConfig.cpp  Grip.cpp  MotorConfig.cpp  eve_main_node.cpp  image_processing_node.cpp  image_processing_node_test.cpp  image_processing_node_working.cpp  main.cpp  motor_node.cpp  test_y.cpp
src/eve_main/src/testing/: publisher_node.cpp  test_node.cpp
src/eve_main/srv/: GetPosition.srv  GoToPosition.srv
(+10 files in other folders)
